Universal remote working

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,8 @@
 platform = espressif32
 board = firebeetle32
 framework = arduino
-monitor_speed = 921600
+monitor_speed = 115200
+upload_port = COM4
 lib_deps = crankyoldgit/IRremoteESP8266@^2.8.2
 build_flags =
     -D CURRENT_TIME=__TIMESTAMP__
